fix List/ListFilter margins on mobile

--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -56,7 +56,7 @@
 }
 
 .listItems{
-    margin-top: 90px;
+    /* handled in List.jsx --> margin-top: 90px; */
     width: 100%;
 }
 
@@ -72,13 +72,14 @@
     .listSearchAndSort{
         flex-direction: column;
         padding-left: 5px;
+        margin-top: 5px;
 
         select{
             margin-top: 5px;
         }
     }
 
-    .listItems{
-        margin-top: 130px;
-    }
+    /* .listItems{
+        handled in List.jsx --> margin-top: 130px;
+    } */
 }
