--- a/src/components/ListFilter/ListFilter.css
+++ b/src/components/ListFilter/ListFilter.css
@@ -9,16 +9,13 @@
     align-items: first baseline;
 
     p{
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin: 0px;
     }
 }
 
 .listFilterItems{
     width: 60%;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
+    margin: 10px 0px 10px 10px;
     padding: 0;
 
     display: flex;
@@ -31,7 +28,7 @@
 }
 
 .filterListItem{
-    margin: 0px 5px 0px 5px;
+    margin: 0px 5px 2.5px 5px;
     border: 1px solid black;
     background-color: white;
     border-radius: 10px;
@@ -53,5 +50,6 @@
 
     .listFilterItems{
         width: 100%;
+        margin: 5px 0px 0px 5px;
     }
 }
